margins fixed: social links and footer sitting higher on smaller device screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -396,7 +396,6 @@ ul {
 /*-------------------Footer */
 
 .social-links li a i {
-    bottom: 2vh;
     width: 45px;
     height: 45px;
     border-radius: 50%;
@@ -409,26 +408,27 @@ ul {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: nowrap;
     transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
     -o-transition: all 0.35s ease-in-out;
 }
 
-.social-container {
-    padding: 0;
-    display: flex;
-}
-
-.social-links {
-    padding: 0;
-    margin: 10px 0;
-    list-style-type: none;
-}
-
 .social-links li a i:hover {
     color: #49274A;
     background-color: #ececef;
+}
+
+.social-links {
+    padding-top: 1vh;
+}
+
+.social-container {
+    padding: 0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 /* snippet below from: https://www.w3schools.com/css/css_align.asp */
@@ -456,7 +456,6 @@ ul {
     text-decoration: none;
     font-family: "Ubuntu", sans-serif;
     text-align: center;
-    display: flex;
     font-weight: 700;
     font-size: 16px;
     letter-spacing: 1px;
@@ -465,8 +464,9 @@ ul {
 }
 
 .footer-container {
+    display: flex;
     margin: 0;
-
+    height: 10vh;
 }
 
 footer {
@@ -604,7 +604,7 @@ footer {
     }
 
     .hero-image-container {
-        margin-top: 0;
+        margin-top: 12vh;
     }
 
     #logo-container {
@@ -612,8 +612,8 @@ footer {
     }
 
     #contact-button,
-    .social-links {
-        transform: scale(0.9);
+    .social-icon {
+        transform: scale(0.8);
     }
 }
 
@@ -684,10 +684,6 @@ footer {
     .contact-container {
         width: 40%;
     }
-
-    footer {
-        max-height: 8vh;
-    }
 }
 
 @media screen and (min-width:768px) {
@@ -727,13 +723,6 @@ footer {
         width: 70%;
         height: 160px;
     }
-
-    /*--- Footer*/
-    footer {
-        max-height: 10vh;
-    }
-
-
 }
 
 @media screen and (max-width:992px) {
